--- a/app/public/views/head.html
+++ b/app/public/views/head.html
@@ -1,5 +1,7 @@
 <head>
 <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600" rel="stylesheet">
 <link href="/stylesheets/main.css" rel="stylesheet">
+<link href="/stylesheets/skeleton.css" rel="stylesheet">
+<link href="/stylesheets/normalize.css" rel="stylesheet">
 </head>
 <body>
