--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -2,6 +2,10 @@ html {
 	font-size: 20%;
 }
 
+body {
+	background-color: #F9F3E8;
+}
+
 p {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 2rem;
