add conversion script and some display

--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -1,3 +1,8 @@
+@font-face {
+	font-family: "Palatino Linotype";
+	src: url("./assets/Palatino Linotype.ttf") format("truetype");
+}
+
 html {
 	font-size: 20%;
 }
@@ -7,7 +12,7 @@ body {
 }
 
 p {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Palatino Linotype';
 	font-size: 2rem;
 }
 
