--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: "Palatino Linotype";
-	src: url("../assets/Palatino Linotype.ttf") format("truetype");
+	src: url("../assets/fonts/Palatino Linotype.ttf") format("truetype");
 }
 
 html {
@@ -11,9 +11,8 @@ body {
 	background-color: #F9F3E8;
 }
 
-.verseText {
+.verseText, .heading {
 	font-family: 'Palatino Linotype';
-	font-size: 2rem;
 }
 
 .verses {
