fixing css linting errors

--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -8,10 +8,11 @@ html {
 }
 
 body {
-	background-color: #F9F3E8;
+	background-color: #f9f3e8;
 }
 
-.verseText, .heading {
+.verseText,
+.heading {
 	font-family: 'Palatino Linotype';
 }
 
