--- a/app/public/stylesheets/normalize.css
+++ b/app/public/stylesheets/normalize.css
@@ -288,7 +288,7 @@ select {
  */
 
 button,
-html input[type="button"], /* 1 */
+html input[type="button"],
 input[type="reset"],
 input[type="submit"] {
 	-webkit-appearance: button; /* 2 */
