--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -16,6 +16,53 @@ body {
 	font-family: 'Palatino Linotype';
 }
 
+/*
+#header::before {
+	content: "";
+	position: fixed;
+	left: 0;
+	right: 0;
+	z-index: -1;
+	display: block;
+	background-color: #f7ecd2;
+	background-size: cover;
+	-webkit-filter: blur(5px);
+	-moz-filter: blur(5px);
+	-o-filter: blur(5px);
+	-ms-filter: blur(5px);
+	filter: blur(5px);
+}
+
+#header {
+	overflow: auto;
+	position: relative;
+} */
+
+#headerBackground {
+	left: 0;
+	right: 0;
+	z-index: 1;
+	position: absolute;
+	background-color: #f7ecd2;
+	opacity: 0.85;
+	width: 100%;
+	height: 100%;
+	-webkit-filter: blur(3px);
+	-moz-filter: blur(3px);
+	-o-filter: blur(3px);
+	-ms-filter: blur(3px);
+	filter: blur(3px);
+}
+
+#headerItems {
+	position: absolute;
+	z-index: 2;
+}
+
+#header {
+	position: fixed;
+}
+
 .verses {
 	margin-right: 20%;
 }
