--- a/app/public/stylesheets/skeleton.css
+++ b/app/public/stylesheets/skeleton.css
@@ -217,8 +217,8 @@ h4,
 h5,
 h6 {
 	font-weight: 300;
-	-webkit-margin-before:0em;
-	-webkit-margin-after:0em;
+	-webkit-margin-before: 0;
+	-webkit-margin-after: 0;
 }
 
 h1 {
